se agrega .bat y instrucciones y se quitan sonidos cuando se ejecuta .JAR debido aque no se encuentran por algun motivo